--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.3.0",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "onchange": "^7.0.2",
+    "parallelshell": "^3.0.2"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "http-proxy": "^1.18.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.12.9"
   }
